fixed link in website column and aligned industry with address

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ header {
     padding-top: 110px;
 }
 
+.bio-sector-no-address2 {
+    padding-top: 82px;
+}
+
 .bio-industry-container {
     text-align: right;
 }
